syntax = "proto3";
package types;
option go_package = "github.com/qlcchain/go-qlc/rpc/grpc/proto/types;types";

message RewardsInfo  {
    int32  type      = 1;
    string from      = 2;
    string to        = 3;
    string txHeader  = 4;
    string rxHeader  = 5;
    int64  amount    = 6;
}

message DestroyInfo  {
    string Owner      = 1;
    string Previous   = 2;
    string Token      = 3;
    int64  Amount      = 4;
    int64  TimeStamp   = 5;
}

message DestroyInfos {
    repeated DestroyInfo infos = 1;
}

message Contractor {
    string Address  = 1;
    string Name     = 2;
}

message ContractService  {
    string serviceId    = 1;
    uint64 mcc          = 2;
    uint64 mnc          = 3;
    uint64 totalAmount  = 4;
    double unitPrice    = 5;
    string currency     = 6;
}

message StopParam  {
    string contractAddress = 1;
    string stopName        = 2;
}

message UpdateStopParam  {
    string contractAddress = 1;
    string stopName        = 2;
    string newName         = 3;
}


message ContractParam  {
    CreateContractParam contractParam  = 1;
    repeated string preStops     = 2;
    repeated string nextStops    = 3;
    int64    confirmDate         = 4;
    int32    status       = 5;
    Terminator      terminator   = 6;
}

message CreateContractParam  {
    Contractor partyA     = 1;
    Contractor partyB     = 2;
    string     Previous   = 3;
    repeated ContractService services  = 4;
    int64 signDate        = 5;
    int64 startDate       = 6;
    int64 endDate         = 7;
}

message Terminator  {
    string address  = 1;
    bool   request  = 2;
}

message Asset  {
    Asset asset     = 1;
    string assetID  = 2;
}

message AssetParam  {
    Contractor owner        = 1;
    repeated Asset assets   = 2;
    int64    signDate       = 3;
    int64    startDate      = 4;
    int64    endDate        = 5;
    int32    status      = 6;
    string   address        = 7;
}

message TerminateParam  {
    string contractAddress  = 1;
    bool   request          = 2;
}

message CDRStatus  {
    map<string, CDRParams> Params = 1;
    int32 status  = 2;
}

message CDRParam  {
    uint64 index          = 1;
    int64  smsDt          = 2;
    string account        = 3;
    string sender         = 4;
    string customer       = 5;
    string destination    = 6;
    int32  sendingStatus  = 7;
    int32  dlrStatus      = 8;
    string preStop        = 9;
    string nextStop       = 10;
}

message CDRParams{
    repeated CDRParam cdrParams = 1;
}